# tensorrt_scripts

./: .gitignore  CMakeLists.txt  crestereo_test.cpp  lightstereo_test.cpp  start_docker.sh
docker/: Dockerfile.pc  build_images.sh
sample/: CMakeLists.txt  config.yaml  infer_sample.cpp
tensorrt_models/: CMakeLists.txt
tensorrt_models/include/: crestereo.hpp  lightstereo.hpp  trt_model.hpp
tensorrt_models/src/: crestereo.cpp  lightstereo.cpp  trt_model.cpp
tensorrt_utils/: CMakeLists.txt
tensorrt_utils/include/: buffers.h
